--- a/initial_cleaning_new2.Rmd
+++ b/initial_cleaning_new2.Rmd
@@ -31,13 +31,13 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID Data_04.11.2022.xlsx"), sheet = 1,
+   read_xlsx(paste0(input_path, "COVID Data_06.20.2022.xlsx"), sheet = 1,
              range = "A2:P40000", na = c(" ", ""),
                         col_names = c("investigation_status", "inv_start_date", "health_worker", 
                                       "cong_living", "age", "age_unit",
                                       "sex", "zipcode", "test_date", "um_student", "race", 
-                                      "ethnicity", "ever_hosp", "patient_died",
-                                      "breakthrough_case", "reinfection_case"),
+                                      "ethnicity", "ever_hosp",
+                                      "breakthrough_case", "reinfection_case", "patient_died"),
                         col_types = c("text", "date", "text",
                                       "text", "text", "text",
                                       "text", "text", "date", "text", "text",
@@ -86,11 +86,11 @@ covid_clean <- covid_data_initial %>%
           hospitalizations = fct_collapse(ever_hosp,
                                           "no" = c("n", NA),
                                           "yes" = c("y", "yes"),
-                                          "unknown" = "unk"),
+                                          "unknown" = c("unk", "u")),
           reinfection_case = fct_collapse(reinfection_case,
                                           "no" = c("n"),
                                           "yes" = c("y"),
-                                          "unknown" = "unk"),
+                                          "unknown" = c("unk")),
           test_date = ymd(test_date),
           inv_start_date = ymd(inv_start_date),
           age_group3 = factor(age_group3,
