--- a/MCCHD_covid_figures_new.Rmd
+++ b/MCCHD_covid_figures_new.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Missoula County COVID-19 Cases"
-date: "Data as of April 11, 2022"
+date: "Data as of June 20, 2022"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -71,6 +71,7 @@ plot(inc_data2)
 
 inc_fit <- fit(inc_data2)
 inc_fit
+inc_fit$info$halving # halving time to report to D'Shane
 inc_fit$info$doubling # doubling time to report to D'Shane
 
 #plot(inc_fit)
@@ -160,12 +161,12 @@ age_count_plot
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group) & !is.na(test_date)) %>% 
-   filter(test_date > "2021-08-31")
+   filter(test_date > "2021-12-31")
 age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot <- covid_data %>% 
-   filter(test_date > "2021-08-31" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2021-12-31" & test_date < Sys.Date()) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    group_by(age_group, week_of_year) %>% 
@@ -183,14 +184,14 @@ age_count_month_plot <- covid_data %>%
                 fill = NA) +
       theme_minimal() +
       labs(title = "Weekly COVID-19 cases by age group",
-        subtitle = paste0("Missoula County, 2021. N = ", age_cases, " cases."),
+        subtitle = paste0("Missoula County, 2022. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Number of cases per week") +
       xlab("") +
-      scale_x_date(breaks = seq.Date(from = as.Date("2021-09-01"), 
+      scale_x_date(breaks = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
-                  labels = seq.Date(from = as.Date("2021-09-01"), 
+                  labels = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
@@ -222,13 +223,13 @@ age_count_month_plot
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group3) & !is.na(test_date)) %>% 
-   filter(test_date > "2021-08-31") %>% 
+   filter(test_date > "2021-12-31") %>% 
    filter(age < 30)
 age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot2 <- covid_data %>% 
-   filter(test_date > "2021-08-31" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2021-12-31" & test_date < Sys.Date()) %>% 
    filter(age < 30) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
@@ -247,14 +248,14 @@ age_count_month_plot2 <- covid_data %>%
                 fill = NA) +
       theme_minimal() +
       labs(title = "Weekly COVID-19 cases by age group",
-        subtitle = paste0("Missoula County, 2021. N = ", age_cases, " cases."),
+        subtitle = paste0("Missoula County, 2022. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Number of cases per week") +
       xlab("") +
-      scale_x_date(breaks = seq.Date(from = as.Date("2021-09-01"), 
+      scale_x_date(breaks = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
-                  labels = seq.Date(from = as.Date("2021-09-01"), 
+                  labels = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
@@ -299,7 +300,7 @@ age_incidence_plot_bar <- age_incidence %>%
      labs(title = "COVID-19 incidence by age group",
           subtitle = paste0("Missoula County, since March 2020. N = ", age_cases, " cases."),
           y = "Incidence per 100,000 Population", x = "Age Group (years)") +
-     scale_y_continuous(breaks = c(seq(0, 50000, 1000)), labels = c(seq(0, 50000, 1000))) +
+     scale_y_continuous(breaks = c(seq(0, 50000, 2000)), labels = c(seq(0, 50000, 2000))) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 18, colour = "black"),
@@ -326,12 +327,12 @@ age_incidence_plot_bar
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group) & !is.na(test_date)) %>% 
-   filter(test_date > "2021-08-31")
+   filter(test_date > "2021-12-31")
 age_cases <- sum(age_n$case)
 
 # Incidence line plot by age and month
 age_incidence_plot_line <- covid_data %>% 
-   filter(test_date > "2021-08-31" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2021-12-31" & test_date < Sys.Date()) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    select(case, age_group, age_group_percent, county_pop, week_of_year) %>% 
@@ -356,17 +357,17 @@ age_incidence_plot_line <- covid_data %>%
                     color = age_group), size = 1.5) +
       theme_minimal() +
       labs(title = "COVID-19 incidence per week by age group",
-        subtitle = paste0("Missoula County, 2021. N = ", age_cases, " cases."),
+        subtitle = paste0("Missoula County, 2022. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Incidence per 100,000") +
       xlab("") +
       geom_label(aes(x = Sys.Date()-21, y = 2200, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-      scale_x_date(breaks = seq.Date(from = as.Date("2021-09-01"), 
+      scale_x_date(breaks = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
-                  labels = seq.Date(from = as.Date("2021-09-01"), 
+                  labels = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
@@ -398,13 +399,13 @@ age_incidence_plot_line
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group) & !is.na(test_date)) %>% 
-   filter(test_date > "2021-08-31") %>% 
+   filter(test_date > "2021-12-31") %>% 
    filter(age < 30)
 age_cases <- sum(age_n$case)
 
 # Incidence line plot by age and month
 age_incidence_plot_line <- covid_data %>% 
-   filter(test_date > "2021-08-31" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2021-12-31" & test_date < Sys.Date()) %>% 
    filter(age < 30) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
@@ -430,17 +431,17 @@ age_incidence_plot_line <- covid_data %>%
                     color = age_group3), size = 1.5) +
       theme_minimal() +
       labs(title = "COVID-19 incidence per week by age group",
-        subtitle = paste0("Missoula County, 2021. N = ", age_cases, " cases."),
+        subtitle = paste0("Missoula County, 2022. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Incidence per 100,000") +
       xlab("") +
       geom_label(aes(x = Sys.Date()-21, y = 2800, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-      scale_x_date(breaks = seq.Date(from = as.Date("2021-09-01"), 
+      scale_x_date(breaks = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
-                  labels = seq.Date(from = as.Date("2021-09-01"), 
+                  labels = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
@@ -473,7 +474,7 @@ age_incidence_plot_line
 # Epi curve - test date
 
 plot_data <- covid_data %>% 
-   filter(test_date > "2021-05-31" & test_date < Sys.Date()) 
+   filter(test_date > "2021-12-31" & test_date < Sys.Date()) 
 
 total_cases <- sum(plot_data$case)
 
@@ -482,42 +483,18 @@ epi_curve_test_date <- plot_data %>%
      geom_rect(aes(xmin = Sys.Date() - 21, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
      geom_col(aes(test_date, case), color = "steelblue") +
-     geom_vline(xintercept = as.numeric(as.Date("2021-07-04")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2021-07-04"), label = "July 4th Holiday", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2021-08-30")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2021-08-30"), label = "Fall Semester", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2021-09-06")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2021-09-06"), label = "Labor Day", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2021-10-31")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2021-10-31"), label = "Halloween", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2021-11-25")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2021-11-25"), label = "Thanksgiving", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2021-12-28")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2021-12-28"), label = "Winter Holidays", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_label(aes(x = Sys.Date()-21, y = 350, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-     labs(title = "COVID-19 Cases in Missoula County Since June 1, 2021",
+     labs(title = "COVID-19 Cases in Missoula County Since January 1, 2022",
           subtitle = paste0("Cases in plot = ", total_cases),
           fill = " ") +
      ylab("Number of Cases") +
      xlab("Test Date") +
-     scale_x_date(breaks = seq.Date(from = as.Date("2021-06-01"), 
+     scale_x_date(breaks = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "5 days"),
-                  labels = seq.Date(from = as.Date("2021-06-01"), 
+                  labels = seq.Date(from = as.Date("2022-01-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "5 days"),
                   date_labels = "%d-%b") + 
@@ -555,7 +532,7 @@ epi_curve_test_date
 case_data <- covid_data %>% 
    rename(dates = test_date) %>% 
    filter(!is.na(dates)) %>% 
-   filter(dates > "2021-05-31" & dates < Sys.Date() - 13) %>% 
+   filter(dates > "2021-12-31" & dates < Sys.Date() - 13) %>% 
    arrange(dates) %>% 
    select(dates, case) %>% 
    arrange(dates) %>% 
@@ -606,7 +583,7 @@ county_r <- cbind(county_r, county_dates_new)
 
 
 county_r_plot <- county_r %>% 
-   filter(dates > "2021-05-31") %>% 
+   filter(dates > "2021-12-31") %>% 
    ggplot() +
    geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
    #geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
@@ -668,18 +645,14 @@ epi_curve_full <- plot_data %>%
      geom_vline(xintercept = as.numeric(as.Date("2020-05-28")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-05-28"), label = "Memorial Day + Phase 2 reopening", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-09-07")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 220), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-07-06")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-07-06"), label = "July 4th + Mask Mandate", vjust = -0.5,
-                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-08-19")), color = "black", 
+                 y = 220), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-09-01")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-08-19"), label = "UM semester start", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-09-01"), label = "Fall Semester + Labor Day", vjust = -0.5,
                  y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-10-31")), color = "black", 
               size = 1, linetype = "dashed") +
@@ -708,11 +681,11 @@ epi_curve_full <- plot_data %>%
      geom_vline(xintercept = as.numeric(as.Date("2021-11-25")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2021-11-25"), label = "Thanksgiving", vjust = -0.5,
-                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2021-12-28")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2021-12-28"), label = "Winter Holidays", vjust = -0.5,
-                 y = 90), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 250), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_label(aes(x = Sys.Date()-40, y = 300, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
@@ -723,10 +696,10 @@ epi_curve_full <- plot_data %>%
      xlab("Test Date") +
      scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "14 days"),
+                                    by = "21 days"),
                   labels = seq.Date(from = as.Date("2020-03-06"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "14 days"),
+                                    by = "21 days"),
                   date_labels = "%d-%b-%y") +
      scale_y_continuous(breaks = seq(0, 500, 25), labels = seq(0, 500, 25)) + 
      theme_minimal() +
@@ -784,7 +757,7 @@ incidence_plot_line <- covid_data %>%
       labs(title = "COVID-19 weekly incidence of cases") +
       ylab("Incidence per 100,000") +
       xlab("") +
-      geom_label(aes(x = Sys.Date()-40, y = 800, 
+      geom_label(aes(x = Sys.Date()-50, y = 1000, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
       scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
@@ -851,7 +824,7 @@ incidence_plot_line <- covid_data %>%
       labs(title = "COVID-19 weekly incidence of hospitalization") +
       ylab("Incidence per 100,000") +
       xlab("") +
-      geom_label(aes(x = Sys.Date()-40, y = 25, 
+      geom_label(aes(x = Sys.Date()-50, y = 25, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
       scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
